2015-07-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2537: Desktop files do not allow installation from
	multiple versions of IcedTea
	* jconsole.desktop: Moved to jconsole.desktop.in.
	* policytool.desktop: Moved to policytool.desktop.in.
	* Makefile.am:
	(ICEDTEA_ENV): Use @JAVA_VER@ in JRE_RELEASE_VERSION,
	rather than hardcoding version.
	(DESKTOP_FILES): Add Java version to filenames.
	(EXTRA_DIST): Remove $(DESKTOP_FILES) as they are
	now handled by autoconf and generated versions shouldn't
	be packaged.
	(all-local): Depend on $(DESKTOP_FILES) being created.
	(clean-local): Add clean-policytool-@JAVA_VER@.desktop
	and clean-jconsole-@JAVA_VER@.desktop
	(.PHONY): Likewise.
	(policytool-@JAVA_VER@.desktop): Generate desktop file
	by replacing _BINDIR_ with actual make variable $(bindir).
	(clean-policytool-@JAVA_VER@.desktop): Remove generated file.
	(jconsole-@JAVA_VER@.desktop): Generate desktop file
	by replacing _BINDIR_ with actual make variable $(bindir).
	(clean-jconsole-@JAVA_VER@.desktop): Remove generated file.
	(install-data-local): Replace hard-coded "1.7.0" with @JAVA_VER@.
	Copy desktop files from build directory.
	* NEWS: Updated.
	* acinclude.m4:
	(IT_DETERMINE_VERSION): Set JAVA_VER to 1.7.0 and include in
	configure output.
	* configure.ac:
	Generate jconsole.desktop and policytool.desktop.
	Drop AC_PREFIX_DEFAULT invocation, reverting to
	/usr/local as default installation directory.
	* jconsole.desktop.in: Moved from jconsole.desktop so
	that @JAVA_VER@ can be replaced by configure and
	_BINDIR_ by the build.
	* policytool.desktop.in: Likewise for policytool.desktop.

2015-07-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* NEWS: Set 2.6.0 release date.

2015-07-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	(JDK_CHANGESET): Update to icedtea-2.6.0.
	(JDK_SHA256SUM): Likewise.
	* configure.ac: Bump to 2.6.0

2015-07-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>
