@@ -1,5 +1,15 @@
 2015-07-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	PR2539: Libraries in some subdirectories of
+	jre/lib/{arch} are not installed
+	* Makefile.am:
+	(install-exec-local): Loop over jre/lib/$(INSTALL_ARCH_DIR)
+	and all subdirectories to ensure all libraries are
+	installed.
+	* NEWS: Updated.
+
+2015-07-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	PR2537: Desktop files do not allow installation from
 	multiple versions of IcedTea
 	* jconsole.desktop: Moved to jconsole.desktop.in.
